--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "symfony/symfony": ">=2.1.0"
+        "symfony/symfony": "~2.4"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.22"
